--- a/environment.yml
+++ b/environment.yml
@@ -13,9 +13,11 @@ dependencies:
   - neovim
   - zarr<=3.0.0a
   - unzip
+
   # For running
   - boto3
   - hyp3lib>=4,<5
+  - gdal<3.11.1  # https://github.com/conda-forge/hyp3lib-feedstock/issues/32
   - s3fs>=2025.1.0
   - pip:
       - -r requirements-static.txt
