--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,6 @@ jobs:
     uses: ASFHyP3/actions/.github/workflows/reusable-release.yml@v0.20.0
     permissions: {}
     with:
-      release_prefix: HyP3 itslive-metadata
-      release_branch: main
-      develop_branch: develop
+      release_prefix: HyP3 ITS_LIVE Metadata
     secrets:
-      USER_TOKEN: ${{ secrets.GH_PAT }}
+      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
