--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -11,8 +11,5 @@ jobs:
     # https://github.com/ASFHyP3/actions#reusable-bump-versionyml
     uses: ASFHyP3/actions/.github/workflows/reusable-bump-version.yml@v0.20.0
     permissions: {}
-    with:
-      user: betolink
-      email: betolin@gmail.com
     secrets:
-      USER_TOKEN: ${{ secrets.GH_PAT }}
+      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
