exclude cryforge from mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,3 +138,4 @@ install_types = true
 non_interactive = true
 pretty = true
 disable_error_code = ["import-untyped"]
+exclude = ["src/hyp3_itslive_metadata/cryoforge/*", "tests/cryoforge/*", "build/*", "_test/*"]
