--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,5 +138,6 @@ install_types = true
 non_interactive = true
 pretty = true
 disable_error_code = ["import-untyped"]
+# FIXME: don't ignore cryoforge
 exclude = ["src/hyp3_itslive_metadata/cryoforge/*", "tests/cryoforge/*", "build/*", "_test/*"]
 follow_imports = "silent"
