--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,13 @@ develop = [
     "pytest-cov",
 ]
 
+[project.scripts]
+metagen = "hyp3_itslive_metadata.cryoforge.generate:main"
+ingest = "hyp3_itslive_metadata.cryoforge.ingestitem:ingest_stac"
+generate-catalog = "hyp3_itslive_metadata.cryoforge.generatebulk:generate_stac_catalog"
+generate-from-parquet = "hyp3_itslive_metadata.cryoforge.generatebatched:generate_stac_catalog"
+search-items = "hyp3_itslive_metadata.cryoforge.search_items:search_items"
+
 [project.urls]
 Homepage = "https://github.com/betolink/itslive-metadata"
 Documentation = "https://hyp3-docs.asf.alaska.edu"
